# budgie-control-center

./: meson.build  meson_options.txt
panels/color/: meson.build
panels/common/: gsd-device-manager.c  meson.build
panels/display/: meson.build
panels/info-overview/: meson.build
panels/wwan/: meson.build
